[project]
name = "sabrina1211-github-io"
version = "0.0.1"
description = "Initial website for Sabrina Minya Vasquez Github"
authors = [
    {name = "Sabrina Minaya Account",email = "sabrinaminaya@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "sabrina1211"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
